--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -7,7 +7,7 @@
   <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
     <% for (let listing of allListings) { %>
     <a
-      class="listing-link card col"
+      class="listing-link card col listing-card"
       style="width: 20rem"
       href="/listings/<%= listing._id %>"
     >
