--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -3,10 +3,10 @@
   <br /><br />
   <div>
     <div class="row">
-      <div class="col-8 offset-2">
-        <h3><b>Listing Details</b></h3>
+      <div class="col-8">
+        <h3><b><%= listing.title %></b></h3>
         <br />
-        <div class="card">
+        <div class="card listing-card">
           <img
             src="<%= listing.image.url %>"
             class="card-img-top show-image"
@@ -15,7 +15,6 @@
           <br />
           <div class="card-body">
             <p class="card-text">
-              <b><%= listing.title %></b> <br />
               <%= listing.description %> <br />
               $<%= listing.price.toLocaleString("en-IN") %> <br />
               <%= listing.location %> <br />
@@ -30,12 +29,104 @@
             href="/listings/<%= listing._id %>/edit"
             >Edit</a
           >
+
           <form
             action="/listings/<%= listing._id %>?_method=DELETE"
             method="post"
           >
-            <button class="btn btn-dark">Delete</button>
+            <button class="btn btn-outline-dark">Delete</button>
           </form>
+        </div>
+        <hr />
+        <div>
+          <h4>Leave a Review</h4>
+          <br />
+          <form
+            action="/listings/<%= listing._id %>/reviews"
+            method="post"
+            novalidate
+            class="needs-validation"
+          >
+            <div class="mb-3 mt-3">
+              <label for="rating" class="form-label">Rating</label>
+              <input
+                type="range"
+                min="1"
+                max="5"
+                step="1"
+                id="rating"
+                name="review[rating]"
+                class="form-range"
+              />
+            </div>
+            <div class="mb-3 mt-3">
+              <label for="comment" class="form-label">Comments</label>
+              <textarea
+                class="form-control"
+                name="review[comment]"
+                id="comment"
+                cols="30"
+                rows="5"
+                required
+              ></textarea>
+              <div class="valid-feedback">looks good!</div>
+              <div class="invalid-feedback">
+                Please provide a comment for review.
+              </div>
+            </div>
+            <button class="btn btn-outline-dark mb-5">Submit</button>
+          </form>
+        </div>
+        <hr />
+        <div>
+          <h4>All Reviews</h4>
+          <!-- <ul>
+            <% for(let review of listing.review){ %>
+            <li><%= review.comment %>, <%= review.rating %> stars</li>
+            <% } %>
+          </ul> -->
+          <div class="row mt-4" style="justify-content: start;column-gap: 15px; margin-left: 0px;">
+            <% for(let review of listing.review){ %>
+            <div class="card col-5 mb-3 p-3" style="width: 420px;">
+              <div class="card-body">
+                <div class="card-title"><h5>Jhon Doe</h5></div>
+                <div class="card-text"><%= review.comment %></div>
+                <div class="card-text"><b style="font-size: 20px;"><%= review.rating %>  &#9733;</b></div>
+              </div>
+              <hr />
+              <div
+                style="
+                  display: flex;
+                  justify-content: space-between;
+                  align-items: center;
+                "
+              >
+                <form
+                  action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
+                  method="post"
+                >
+                  <button class="btn btn-sm btn-dark mt-2 comt-del-btn">Delete</button>
+                </form>
+                <div style="
+                  display: flex;
+                  justify-content: center;
+                  gap: .5rem;
+                  align-items: center;    
+                  margin-left: 30px;
+                ">
+                 <span>
+                  <b>Time</b>: <small><%= review.createdAt.toString().split(" ")[4] %></small>
+                </span>
+                -
+                <span>
+                  <b>Date</b>: <small><%=
+                review.createdAt.toString().split(" ").slice(1,4).join(".") %></small>
+                </span>
+                </div>
+              </div>
+            </div>
+            <% } %>
+          </div>
         </div>
       </div>
     </div>
