--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,36 +1,36 @@
 <% layout("/layouts/boilerplate") %>
-<body>
-  <h3>All Listings</h3>
-  <!-- <form action="/listings/new" method="get">
+
+<h3 class="ms-4 mb-5 mt-3">All Listings<hr></h3>
+
+<!-- <form action="/listings/new" method="get">
     <button>New Lisiting</button>
   </form> -->
-  <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
-    <% for (let listing of allListings) { %>
-    <a
-      class="listing-link card col listing-card"
-      style="width: 20rem"
-      href="/listings/<%= listing._id %>"
-    >
-      <img
-        style="height: 16rem"
-        src="<%= listing.image.url %>"
-        class="card-img-top"
-        alt="..."
-      />
-      <div class="card-img-overlay"></div>
-      <div class="card-body">
-        <p class="card-text">
-          <b><%= listing.title %></b> <br />
-          $<%= listing.price.toLocaleString("en-IN") %> / night
-        </p>
-      </div>
-    </a>
-    <% } %>
-  </div>
+<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+  <% for (let listing of allListings) { %>
+  <a
+    class="listing-link card col listing-card"
+    style="width: 20rem"
+    href="/listings/<%= listing._id %>"
+  >
+    <img
+      style="height: 16rem"
+      src="<%= listing.image.url %>"
+      class="card-img-top"
+      alt="..."
+    />
+    <div class="card-img-overlay"></div>
+    <div class="card-body">
+      <p class="card-text">
+        <b><%= listing.title %></b> <br />
+        $<%= listing.price.toLocaleString("en-IN") %> / night
+      </p>
+    </div>
+  </a>
+  <% } %>
+</div>
 
-  <!-- <ul>
+<!-- <ul>
     <% for( let listing of allListings) { %>
     <li><a href="/listings/<%= listing._id %>"><%= listing.title %></a></li>
     <% } %>
   </ul> -->
-</body>
