--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -12,9 +12,10 @@
             class="card-img-top show-image"
             alt="Lisiting_image"
           />
-          <br />
           <div class="card-body">
-            <p class="card-text">
+            <p class="card-text show-crd-txt">
+              <strong>Owned By: <i><%= listing.owner.username %></i></strong
+              ><br />
               <%= listing.description %> <br />
               $<%= listing.price.toLocaleString("en-IN") %> <br />
               <%= listing.location %> <br />
@@ -22,7 +23,7 @@
             </p>
           </div>
         </div>
-
+        <% if(currUser && currUser._id.equals(listing.owner._id)){ %>
         <div class="show-btns">
           <a
             class="btn btn-dark edit-btn"
@@ -37,10 +38,11 @@
             <button class="btn btn-outline-dark">Delete</button>
           </form>
         </div>
+        <% } %>
         <hr />
+        <% if(currUser){ %>
         <div>
           <h4>Leave a Review</h4>
-          <br />
           <form
             action="/listings/<%= listing._id %>/reviews"
             method="post"
@@ -48,16 +50,20 @@
             class="needs-validation"
           >
             <div class="mb-3 mt-3">
-              <label for="rating" class="form-label">Rating</label>
-              <input
-                type="range"
-                min="1"
-                max="5"
-                step="1"
-                id="rating"
-                name="review[rating]"
-                class="form-range"
-              />
+            <label for="rating" class="form-label">Rating</label>
+            <fieldset class="starability-slot">
+              <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
+              <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+              <label for="first-rate1" title="Terrible">1 star</label>
+              <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+              <label for="first-rate2" title="Not good">2 stars</label>
+              <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+              <label for="first-rate3" title="Average">3 stars</label>
+              <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+              <label for="first-rate4" title="Very good">4 stars</label>
+              <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+              <label for="first-rate5" title="Amazing">5 stars</label>
+            </fieldset>
             </div>
             <div class="mb-3 mt-3">
               <label for="comment" class="form-label">Comments</label>
@@ -78,20 +84,23 @@
           </form>
         </div>
         <hr />
+        <% } %>
         <div>
           <h4>All Reviews</h4>
-          <!-- <ul>
+          <div
+            class="row mt-4"
+            style="justify-content: start; column-gap: 15px; margin-left: 0px"
+          >
             <% for(let review of listing.review){ %>
-            <li><%= review.comment %>, <%= review.rating %> stars</li>
-            <% } %>
-          </ul> -->
-          <div class="row mt-4" style="justify-content: start;column-gap: 15px; margin-left: 0px;">
-            <% for(let review of listing.review){ %>
-            <div class="card col-5 mb-3 p-3" style="width: 420px;">
+            <div class="card col-5 mb-3 p-3" style="width: 420px">
               <div class="card-body">
-                <div class="card-title"><h5>Jhon Doe</h5></div>
+                <div class="card-title"><h5 style="display: inline-block;">@<%= review.author.username %></h5> <i style="font-size: 12px; margin-right: 0;margin-left: 10px;">_(Author)_</i></div><p  class="card-text starability-result" data-rating="<%= review.rating %>">
+                    
+                  </p>
                 <div class="card-text"><%= review.comment %></div>
-                <div class="card-text"><b style="font-size: 20px;"><%= review.rating %>  &#9733;</b></div>
+                <br>
+                  
+                
               </div>
               <hr />
               <div
@@ -105,23 +114,31 @@
                   action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
                   method="post"
                 >
-                  <button class="btn btn-sm btn-dark mt-2 comt-del-btn">Delete</button>
+                  <button class="btn btn-sm btn-dark mt-2 comt-del-btn">
+                    Delete
+                  </button>
                 </form>
-                <div style="
-                  display: flex;
-                  justify-content: center;
-                  gap: .5rem;
-                  align-items: center;    
-                  margin-left: 30px;
-                ">
-                 <span>
-                  <b>Time</b>: <small><%= review.createdAt.toString().split(" ")[4] %></small>
-                </span>
-                -
-                <span>
-                  <b>Date</b>: <small><%=
-                review.createdAt.toString().split(" ").slice(1,4).join(".") %></small>
-                </span>
+                <div
+                  style="
+                    display: flex;
+                    justify-content: center;
+                    gap: 0.5rem;
+                    align-items: center;
+                    margin-left: 30px;
+                  "
+                >
+                  <span>
+                    <b>Time</b>:
+                    <small
+                      ><%= review.createdAt.toString().split(" ")[4] %></small
+                    >
+                  </span>
+                  -
+                  <span>
+                    <b>Date</b>:
+                    <small><%= review.createdAt.toString().split(" ").slice(1,4).join(".") %></small
+                    >
+                  </span>
                 </div>
               </div>
             </div>
