--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -6,8 +6,9 @@
     method="post"
     novalidate
     class="needs-validation"
+    enctype="multipart/form-data"
   >
-    <div>
+    <div class="mt-3 mb-3">
       <label for="title" class="form-label">Title</label>
       <input
         id="title"
@@ -21,7 +22,7 @@
       <div class="invalid-feedback">Please provide a valid title.</div>
     </div>
 
-    <div>
+    <div class="mt-3 mb-3">
       <label for="description" class="form-label">Description</label>
       <textarea
         id="description"
@@ -35,20 +36,29 @@
       <div class="valid-feedback">Description looks good!</div>
       <div class="invalid-feedback">Please provide a valid description.</div>
     </div>
-    <div>
-      <label for="image" class="form-label">Image</label>
-      <input
-        type="text"
-        name="listing[image]"
-        id="image"
-        class="form-control"
-        value="<%= listing.image %>"
-        required
-      />
-      <div class="valid-feedback">Image looks good!</div>
-      <div class="invalid-feedback">Please provide a valid Image-URL.</div>
+    <div class="row mt-3 mb-3">
+      <div class="col-3 edit-form-img-div">
+        <img
+          src="<%= parsedImageUrl %>"
+          class="edit-form-img"
+          alt="<%= listing.image.filename %>"
+        />
+        <h6 style="text-align: center; margin-top: 5px; color: #757575">
+          <i>(Saved Image)</i>
+        </h6>
+      </div>
+      <div class="col-9 mt-auto mb-auto">
+        <label for="image" class="form-label">Upload a New Image</label>
+        <input
+          type="file"
+          name="listing[image]"
+          id="image"
+          class="form-control"
+        />
+        <div class="invalid-feedback">Image is required.</div>
+      </div>
     </div>
-    <div class="row">
+    <div class="row mt-3 mb-3">
       <div class="col-md-4">
         <label for="price" class="form-label">Price</label>
         <input
@@ -76,7 +86,7 @@
         <div class="invalid-feedback">Please provide a valid Country.</div>
       </div>
     </div>
-    <div>
+    <div class="mt-3 mb-3">
       <label for="location" class="form-label">Location</label>
       <input
         type="text"
