--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,10 +1,89 @@
 <% layout("/layouts/boilerplate") %>
 
-<h3 class="ms-4 mb-5 mt-3">All Listings<hr></h3>
+<!-- <h3 class="ms-4 mb-5 mt-3">All Listings<hr></h3> -->
 
 <!-- <form action="/listings/new" method="get">
     <button>New Lisiting</button>
   </form> -->
+<style>
+  #filters {
+    display: flex;
+    margin-top: 1rem;
+    text-align: center;
+    flex-wrap: wrap;
+  }
+  .filter {
+    margin-right: 1rem;
+    opacity: 0.7;
+  }
+  .filter:hover {
+    cursor: pointer;
+    opacity: 1;
+  }
+  .filter p {
+    font-size: 0.8rem;
+  }
+  .filter i {
+    font-size: 1.5rem;
+  }
+</style>
+<div id="filters">
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-fire"></i>
+      <p>Trending</p>
+    </div>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-bed"></i>
+      <p>Rooms</p>
+    </div>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-mountain-city"></i>
+      <p>Iconic Cities</p>
+    </div>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-mountain"></i>
+      <p>Mountain</p>
+    </div>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-brands fa-fort-awesome-alt"></i>
+      <p>Castle</p>
+    </div>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-person-swimming"></i>
+      <p>Pool</p>
+    </div>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-campground"></i>
+      <p>Camping</p>
+    </div>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-cow"></i>
+      <p>Farm</p>
+    </div>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-regular fa-snowflake"></i>
+      <p>Arctic</p>
+    </div>
+  </div>
+</div>
+
 <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
   <% for (let listing of allListings) { %>
   <a
