--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -47,9 +47,9 @@
         type="file"
         name="listing[image]"
         class="form-control"
+        required
       />
-      <div class="valid-feedback">Image looks good!</div>
-      <div class="invalid-feedback">Please provide a valid Image-URL.</div>
+      <div class="invalid-feedback">Image is required.</div>
     </div>
     <div class="row">
       <div class="col-md-4">
