--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,151 +1,202 @@
 <% layout("/layouts/boilerplate") %>
-<body>
-  <br /><br />
-  <div>
-    <div class="row">
-      <div class="col-8">
-        <h3><b><%= listing.title %></b></h3>
-        <br />
-        <div class="card listing-card">
-          <img
-            src="<%= listing.image.url %>"
-            class="card-img-top show-image"
-            alt="Lisiting_image"
-          />
-          <div class="card-body">
-            <p class="card-text show-crd-txt">
-              <strong>Owned By: <i><%= listing.owner.username %></i></strong
-              ><br />
-              <%= listing.description %> <br />
-              $<%= listing.price.toLocaleString("en-IN") %> <br />
-              <%= listing.location %> <br />
-              <%= listing.country %> <br />
-            </p>
-          </div>
-        </div>
-        <% if(currUser && currUser._id.equals(listing.owner._id)){ %>
-        <div class="show-btns">
-          <a
-            class="btn btn-dark edit-btn"
-            href="/listings/<%= listing._id %>/edit"
-            >Edit</a
-          >
+<script>
+  let mapTokken = "<%= process.env.MAP_TOKKEN %>";
+  let listing = <%- JSON.stringify(listing) %>;
 
-          <form
-            action="/listings/<%= listing._id %>?_method=DELETE"
-            method="post"
-          >
-            <button class="btn btn-outline-dark">Delete</button>
-          </form>
+  </script>
+<br /><br />
+<div>
+  <div class="row">
+    <div class="col-8">
+      <h3><b><%= listing.title %></b></h3>
+      <br />
+      <div class="card listing-card">
+        <img
+          src="<%= listing.image.url %>"
+          class="card-img-top show-image"
+          alt="Lisiting_image"
+        />
+        <div class="card-body">
+          <p class="card-text show-crd-txt">
+            <strong>Owned By: <i><%= listing.owner.username %></i></strong
+            ><br />
+            <%= listing.description %> <br />
+            $<%= listing.price.toLocaleString("en-IN") %> <br />
+            <%= listing.location %> <br />
+            <%= listing.country %> <br />
+          </p>
         </div>
-        <% } %>
-        <hr />
-        <% if(currUser){ %>
-        <div>
-          <h4>Leave a Review</h4>
-          <form
-            action="/listings/<%= listing._id %>/reviews"
-            method="post"
-            novalidate
-            class="needs-validation"
-          >
-            <div class="mb-3 mt-3">
+      </div>
+      <% if(currUser && currUser._id.equals(listing.owner._id)){ %>
+      <div class="show-btns">
+        <a
+          class="btn btn-dark edit-btn"
+          href="/listings/<%= listing._id %>/edit"
+          >Edit</a
+        >
+
+        <form
+          action="/listings/<%= listing._id %>?_method=DELETE"
+          method="post"
+        >
+          <button class="btn btn-outline-dark">Delete</button>
+        </form>
+      </div>
+      <% } %>
+      <hr />
+      <% if(currUser){ %>
+      <div>
+        <h4>Leave a Review</h4>
+        <form
+          action="/listings/<%= listing._id %>/reviews"
+          method="post"
+          novalidate
+          class="needs-validation"
+        >
+          <div class="mb-3 mt-3">
             <label for="rating" class="form-label">Rating</label>
             <fieldset class="starability-slot">
-              <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
-              <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+              <input
+                type="radio"
+                id="no-rate"
+                class="input-no-rate"
+                name="review[rating]"
+                value="1"
+                checked
+                aria-label="No rating."
+              />
+              <input
+                type="radio"
+                id="first-rate1"
+                name="review[rating]"
+                value="1"
+              />
               <label for="first-rate1" title="Terrible">1 star</label>
-              <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+              <input
+                type="radio"
+                id="first-rate2"
+                name="review[rating]"
+                value="2"
+              />
               <label for="first-rate2" title="Not good">2 stars</label>
-              <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+              <input
+                type="radio"
+                id="first-rate3"
+                name="review[rating]"
+                value="3"
+              />
               <label for="first-rate3" title="Average">3 stars</label>
-              <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+              <input
+                type="radio"
+                id="first-rate4"
+                name="review[rating]"
+                value="4"
+              />
               <label for="first-rate4" title="Very good">4 stars</label>
-              <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+              <input
+                type="radio"
+                id="first-rate5"
+                name="review[rating]"
+                value="5"
+              />
               <label for="first-rate5" title="Amazing">5 stars</label>
             </fieldset>
+          </div>
+          <div class="mb-3 mt-3">
+            <label for="comment" class="form-label">Comments</label>
+            <textarea
+              class="form-control"
+              name="review[comment]"
+              id="comment"
+              cols="30"
+              rows="5"
+              required
+            ></textarea>
+            <div class="valid-feedback">looks good!</div>
+            <div class="invalid-feedback">
+              Please provide a comment for review.
             </div>
-            <div class="mb-3 mt-3">
-              <label for="comment" class="form-label">Comments</label>
-              <textarea
-                class="form-control"
-                name="review[comment]"
-                id="comment"
-                cols="30"
-                rows="5"
-                required
-              ></textarea>
-              <div class="valid-feedback">looks good!</div>
-              <div class="invalid-feedback">
-                Please provide a comment for review.
+          </div>
+          <button class="btn btn-outline-dark mb-5">Submit</button>
+        </form>
+      </div>
+      <hr />
+      <% } %> <% if(listing.review.length>0){ %>
+      <div>
+        <h4>All Reviews</h4>
+        <div
+          class="row mt-4"
+          style="justify-content: start; column-gap: 15px; margin-left: 0px"
+        >
+          <% for(let review of listing.review){ %>
+          <div class="card col-5 mb-3 p-3" style="width: 420px">
+            <div class="card-body">
+              <div class="card-title">
+                <h5 style="display: inline-block">
+                  @<%= review.author.username %>
+                </h5>
+                <i style="font-size: 12px; margin-right: 0; margin-left: 10px"
+                  >_(Author)_</i
+                >
               </div>
+              <p
+                class="card-text starability-result"
+                data-rating="<%= review.rating %>"
+              ></p>
+              <div class="card-text"><%= review.comment %></div>
+              <br />
             </div>
-            <button class="btn btn-outline-dark mb-5">Submit</button>
-          </form>
-        </div>
-        <hr />
-        <% } %>
-        <div>
-          <h4>All Reviews</h4>
-          <div
-            class="row mt-4"
-            style="justify-content: start; column-gap: 15px; margin-left: 0px"
-          >
-            <% for(let review of listing.review){ %>
-            <div class="card col-5 mb-3 p-3" style="width: 420px">
-              <div class="card-body">
-                <div class="card-title"><h5 style="display: inline-block;">@<%= review.author.username %></h5> <i style="font-size: 12px; margin-right: 0;margin-left: 10px;">_(Author)_</i></div><p  class="card-text starability-result" data-rating="<%= review.rating %>">
-                    
-                  </p>
-                <div class="card-text"><%= review.comment %></div>
-                <br>
-                  
-                
-              </div>
-              <hr />
+            <hr />
+            <div
+              style="
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+              "
+            >
+              <form
+                action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
+                method="post"
+              >
+                <button class="btn btn-sm btn-dark mt-2 comt-del-btn">
+                  Delete
+                </button>
+              </form>
               <div
                 style="
                   display: flex;
-                  justify-content: space-between;
+                  justify-content: center;
+                  gap: 0.5rem;
                   align-items: center;
+                  margin-left: 30px;
                 "
               >
-                <form
-                  action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
-                  method="post"
-                >
-                  <button class="btn btn-sm btn-dark mt-2 comt-del-btn">
-                    Delete
-                  </button>
-                </form>
-                <div
-                  style="
-                    display: flex;
-                    justify-content: center;
-                    gap: 0.5rem;
-                    align-items: center;
-                    margin-left: 30px;
-                  "
-                >
-                  <span>
-                    <b>Time</b>:
-                    <small
-                      ><%= review.createdAt.toString().split(" ")[4] %></small
-                    >
-                  </span>
-                  -
-                  <span>
-                    <b>Date</b>:
-                    <small><%= review.createdAt.toString().split(" ").slice(1,4).join(".") %></small
-                    >
-                  </span>
-                </div>
+                <span>
+                  <b>Time</b>:
+                  <small
+                    ><%= review.createdAt.toString().split(" ")[4] %></small
+                  >
+                </span>
+                -
+                <span>
+                  <b>Date</b>:
+                  <small
+                    ><%= review.createdAt.toString().split(" ").slice(1,4).join(".") %></small
+                  >
+                </span>
               </div>
             </div>
-            <% } %>
           </div>
+          <% } %>
         </div>
       </div>
+      <hr>
+      <% } %>
+    </div>
+    <div class="col-8">
+      <h3>Where you'll be</h3>
+      <div id="map"></div>
     </div>
   </div>
-</body>
+</div>
+<script src="/static/js/map.js"></script>
